--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -614,3 +614,14 @@ ul.CTAs a {
   font-size: 0.8rem;
   color: grey;
 }
+
+
+
+
+#collasible-nav-dropdown{
+  font-weight: bold;
+ background-color: rgb(255, 255, 255);
+box-shadow: 5px 5px 5px 5px rgb(240, 240, 240);
+color:#fa9c23;
+text-transform: uppercase;
+}
